--- a/scss/components/index/_fourth.scss
+++ b/scss/components/index/_fourth.scss
@@ -1,8 +1,8 @@
 /* Fourth Row********************************* */
 .index {
   .fourth__Header {
-    color: rgb(23, 148, 254);
-    border-right: solid green;
+    color: $myBlue;
+    border-right: solid $myGreen;
     text-indent: 10px;
   }
 
