--- a/scss/components/index/_sixth.scss
+++ b/scss/components/index/_sixth.scss
@@ -2,7 +2,7 @@
 .index {
   .sixth {
     border-radius: 3vw;
-    box-shadow: 1px 1px 10px 1px rgb(170, 215, 255);
+    box-shadow: 1px 1px 10px 1px $myShadow;
     background-image: url("../assets/Path15631.png");
     background-repeat: no-repeat;
     z-index: -1;
@@ -10,8 +10,8 @@
   }
 
   .sixth h1 {
-    color: rgb(23, 148, 254);
-    border-right: solid green;
+    color: $myBlue;
+    border-right: solid $myGreen;
   }
 
   .sixth form {
@@ -27,7 +27,7 @@
     height: 3em;
     border-radius: 8px;
     outline: none;
-    border: solid rgb(238, 237, 237);
+    border: solid $myWhite;
   }
 
   .sixth button {
@@ -38,8 +38,8 @@
     height: 2em;
     width: 7em;
     border-radius: 8px;
-    background-color: rgb(23, 148, 254);
+    background-color: $myBlue;
     font-weight: bold;
-    color: white;
+    color: $myWhite;
   }
 }
