--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -1,3 +1,4 @@
+/*  header*********************************************  */
 .custom-nav-large {
   color: $myBlack;
   border-bottom: solid $myWhite;
